--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: "CI"
 
-on: push
+on:
+  push:
+  schedule:
+    - 0 7 * * 1,3,5
 
 jobs:
   build:
@@ -37,7 +40,7 @@ jobs:
           HUGO_PARAMS_githubToken: ${{ secrets.GITHUB_TOKEN }}
   deploy:
     name: "📤 Deploy"
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags'))
     needs:
       - build
     runs-on: ubuntu-latest
