--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: "16.13.1"
           cache: yarn
+          cache-dependency-path: assets/yarn.lock
       - name: "🧰 Install Hugo"
         uses: peaceiris/actions-hugo@v2
         with:
@@ -49,6 +50,7 @@ jobs:
         with:
           node-version: "16.13.1"
           cache: yarn
+          cache-dependency-path: assets/yarn.lock
       - name: "🧰 Install Hugo"
         uses: peaceiris/actions-hugo@v2
         with:
