--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ name: "CI"
 on:
   push:
   pull_request:
+  workflow_dispatch:
   schedule:
-    - cron: "0 7 * * 1,3,5"
+    - cron: "0 7 * * *"
 
 jobs:
   build:
@@ -38,7 +39,12 @@ jobs:
           HUGO_PARAMS_githubToken: ${{ secrets.GITHUB_TOKEN }}
   deploy:
     name: "📤 Deploy"
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags'))
+    if: |
+      (github.event_name == 'push' || 
+        github.event_name == 'workflow_dispatch' || 
+        github.event_name == 'schedule') && 
+      (github.ref == 'refs/heads/main' || 
+        startsWith(github.ref, 'refs/tags'))
     needs:
       - build
     runs-on: ubuntu-latest
