--- a/data/education.yml
+++ b/data/education.yml
@@ -5,11 +5,11 @@
     year: 2016
     month: 6
   institution:
-    name: Wilhelm-Gymnasium Braunschweig
+    name: "Wilhelm-Gymnasium Braunschweig"
     url: https://wilhelm-gym.de/
   degree:
-    title: Abitur
-    description: Allgemeine Hochschulreife
+    title: "Abitur"
+    description: "Allgemeine Hochschulreife"
   note: 1.7
   certificate: /pdf/abitur.pdf
 - from:
@@ -19,15 +19,15 @@
     year: 2020
     month: 7
   institution:
-    name: Martin-Luther-Universität Halle-Wittenberg
+    name: "Martin-Luther-Universität Halle-Wittenberg"
     url: https://uni-halle.de/
   degree:
-    title: B.Sc.
-    description: Bachelor of Science
+    title: "B.Sc."
+    description: "Bachelor of Science"
     program:
       i18n: degreeProgramComputerScience
   thesis:
-    title: Bias in Learning to Rank Caused by Redundant Web Documents
+    title: "Bias in Learning to Rank Caused by Redundant Web Documents"
     thesis: /pdf/bsc-thesis.pdf
     slides: /pdf/bsc-slides.pdf
     source: https://github.com/webis-de/sigir20-sampling-bias-due-to-near-duplicates-in-learning-to-rank
@@ -37,10 +37,10 @@
     year: 2020
     month: 04
   institution:
-    name: Martin-Luther-Universität Halle-Wittenberg
+    name: "Martin-Luther-Universität Halle-Wittenberg"
     url: https://uni-halle.de/
   degree:
-    title: M.Sc.
-    description: Master of Science
+    title: "M.Sc."
+    description: "Master of Science"
     program:
       i18n: degreeProgramComputerScience
