--- a/data/facts.yml
+++ b/data/facts.yml
@@ -1,9 +1,9 @@
 name: Jan Heinrich Reimer
 address:
-  street: Große Märkerstraße 20
-  zip: "06108"
-  city: Halle (Saale)
-  country: Deutschland
+  street: "Hohestieg 12"
+  zip: "38118"
+  city: "Braunschweig"
+  country: "Deutschland"
 birthday: 1998-01-25
 mail: heinrich@reimer.family
 phone: +49 174 9273954
