--- a/data/skills.yaml
+++ b/data/skills.yaml
@@ -8,64 +8,64 @@
 - name:
     i18n: code
   items:
-    - name: Python
+    - name: "Python"
       url: https://python.org/
-    - name: Kotlin
+    - name: "Kotlin"
       url: https://kotlinlang.org/
-    - name: Java
+    - name: "Java"
       url: https://oracle.com/java/
-    - name: Android
+    - name: "Android"
       url: https://android.com/
-    - name: Docker
-      url: https://docker.com/
-    - name: Kubernetes
-      url: https://kubernetes.io/
-    - name: HTML
+    - name: "HTML"
       url: https://w3.org/html/
-    - name: CSS
+    - name: "CSS"
       url: https://w3.org/Style/CSS/
-    - name: Flutter
-      url: https://flutter.dev/
-    - name: SQL
+    - name: "SQL"
       url: https://mysql.com/
-    - name: GraphQL
-      url: https://graphql.org/
-    - name: JSON
+    - name: "JSON"
       url: https://json.org/
-    - name: XML
+    - name: "XML"
       url: https://w3.org/standards/xml/
-    - name: Dart
-      url: https://dart.dev/
-    - name: TypeScript
-      url: https://www.typescriptlang.org/
-    - name: REST
-      url: https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm
-    - name: Haskell
-      url: https://haskell.org/
-    - name: Elm
+    - name: "Elm"
       url: https://elm-lang.org/
-    - name: Julia
+    - name: "TypeScript"
+      url: https://www.typescriptlang.org/
+    - name: "Flutter"
+      url: https://flutter.dev/
+    - name: "Dart"
+      url: https://dart.dev/
+    - name: "GraphQL"
+      url: https://graphql.org/
+    - name: "REST"
+      url: https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm
+    - name: "Haskell"
+      url: https://haskell.org/
+    - name: "Julia"
       url: https://julialang.org/
-    - name: Go
+    - name: "Go"
       url: https://golang.org/
 - name:
     i18n: frameworks
   items:
-    - name: IntelliJ IDEA
+    - name: "IntelliJ IDEA"
       url: https://jetbrains.com/idea/
-    - name: VS Code
+    - name: "VS Code"
       url: https://code.visualstudio.com/
-    - name: Git
+    - name: "Git"
       url: https://git-scm.com/
-    - name: Spark/Hadoop
+    - name: "Docker"
+      url: https://docker.com/
+    - name: "Spark/Hadoop"
       url: https://spark.apache.org/
-    - name: Elasticsearch
+    - name: "Elasticsearch"
       url: https://elastic.co/elastic-stack/
+    - name: "Kubernetes"
+      url: https://kubernetes.io/
 - name:
     i18n: design
   items:
-    - name: UI
-    - name: Figma
+    - name: "UI"
+    - name: "Figma"
       url: https://figma.com/
     - name:
         i18n: appIcons
