--- a/data/websites.yml
+++ b/data/websites.yml
@@ -1,8 +1,12 @@
-- url: https://klasse-wir-singen.de/
+- title: "Klasse! Wir singen"
+  url: https://klasse-wir-singen.de/
   screenshot: https://image.thum.io/get/noanimate/crop/900/https://klasse-wir-singen.de/
-- url: https://orgel-braunschweigerdom.de/
+- title: "Orgelbauverein Braunschweig"
+  url: https://orgel-braunschweigerdom.de/
   screenshot: https://image.thum.io/get/noanimate/crop/900/https://orgel-braunschweigerdom.de/
-- url: https://johannes-foto.de/
+- title: "Johannes' Fotoblog"
+  url: https://johannes-foto.de/
   screenshot: https://image.thum.io/get/noanimate/crop/900/https://johannes-foto.de/
-- url: https://kreativ-werkstatt-reimer.de/
+- title: "Kreativ Werkstatt Reimer"
+  url: https://kreativ-werkstatt-reimer.de/
   screenshot: https://image.thum.io/get/noanimate/crop/900/https://kreativ-werkstatt-reimer.de/
