Add thesis title

--- a/data/education.yml
+++ b/data/education.yml
@@ -44,3 +44,5 @@
     description: "Master of Science"
     program:
       i18n: degreeProgramComputerScience
+  thesis:
+    title: "Identifying and Answering Health-Related Questions"
