--- a/data/education.yml
+++ b/data/education.yml
@@ -1,17 +1,29 @@
 - from:
-    year: 2008
-    month: 8
-  to:
-    year: 2016
-    month: 6
+    year: 2023
+    month: 05
   institution:
-    name: "Wilhelm-Gymnasium Braunschweig"
-    url: https://wilhelm-gym.de/
+    name: "Friedrich-Schiller-Universität Jena"
+    url: https://uni-jena.de/
   degree:
-    title: "Abitur"
-    description: "Allgemeine Hochschulreife"
-  note: 1.7
-  certificate: /pdf/abitur.pdf
+    title: "Ph.D."
+    description: "Doctor of Philosophy"
+- from:
+    year: 2020
+    month: 04
+  to:
+    year: 2023
+    month: 4
+  institution:
+    name: "Martin-Luther-Universität Halle-Wittenberg"
+    url: https://uni-halle.de/
+  degree:
+    title: "M.Sc."
+    description: "Master of Science"
+    program:
+      i18n: degreeProgramComputerScience
+  thesis:
+    title: "Identifying and Answering Health-Related Questions"
+  note: 1.5
 - from:
     year: 2016
     month: 10
@@ -34,15 +46,16 @@
   note: 1.7
   certificate: /pdf/bsc.pdf
 - from:
-    year: 2020
-    month: 04
+    year: 2008
+    month: 8
+  to:
+    year: 2016
+    month: 6
   institution:
-    name: "Martin-Luther-Universität Halle-Wittenberg"
-    url: https://uni-halle.de/
+    name: "Wilhelm-Gymnasium Braunschweig"
+    url: https://wilhelm-gym.de/
   degree:
-    title: "M.Sc."
-    description: "Master of Science"
-    program:
-      i18n: degreeProgramComputerScience
-  thesis:
-    title: "Identifying and Answering Health-Related Questions"
+    title: "Abitur"
+    description: "Allgemeine Hochschulreife"
+  note: 1.7
+  certificate: /pdf/abitur.pdf
