--- a/data/awards.yaml
+++ b/data/awards.yaml
@@ -1,3 +1,8 @@
+- year: 2023
+  month: 07
+  name: "SIGIR Best Paper Award"
+  description: "The Information Retrieval Experiment Platform. SIGIR 2023 Resource Paper."
+  url: https://sigir.org/awards/best-paper-awards/
 - year: 2022
   month: 10
   name: "Deutschlandstipendium"
