--- a/data/education.yml
+++ b/data/education.yml
@@ -5,8 +5,8 @@
     name: "Friedrich-Schiller-Universität Jena"
     url: https://uni-jena.de/
   degree:
-    title: "Ph.D."
-    description: "Doctor of Philosophy"
+    title: "Dr. rer. nat."
+    description: "Doctor rerum naturalium"
 - from:
     year: 2020
     month: 04
