--- a/data/awards.yaml
+++ b/data/awards.yaml
@@ -1,4 +1,11 @@
 - year: 2023
+  month: 08
+  name: "ESSIR Student Registration Fee Waiver"
+  url: https://2023.essir.eu/attending/registration.html#grant
+  value:
+    sum: 400
+    unit: EUR
+- year: 2023
   month: 07
   name: "SIGIR Best Paper Award"
   description: "The Information Retrieval Experiment Platform. SIGIR 2023 Resource Paper."
