--- a/assets/package.json
+++ b/assets/package.json
@@ -2,6 +2,7 @@
   "license": "SEE LICENSE IN ../LICENSE",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "academicons": "^1.9.2",
     "cc-icons": "^1.0.0",
     "normalize-scss": "^7.0.1"
   }
