--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,7 @@ jobs:
           hugo-version: '0.123.4'
           extended: true
       - name: 🧰 Install dart-sass-embedded
-        run: |
-          curl -LJO https://github.com/sass/dart-sass-embedded/releases/download/1.56.2/sass_embedded-1.56.2-linux-x64.tar.gz;
-          echo "9e4f455f7b8619959d7878af2862383be58392eb963a14ff87cc512c03701e2a  sass_embedded-1.56.2-linux-x64.tar.gz" | sha256sum -c;
-          tar -xvf sass_embedded-1.56.2-linux-x64.tar.gz;
-          echo "$GITHUB_WORKSPACE/sass_embedded/" >> $GITHUB_PATH
+        run: sudo snap install dart-sass
       - name: 🧰 Install Node
         uses: actions/setup-node@v4
         with:
