--- a/data/facts.yml
+++ b/data/facts.yml
@@ -1,11 +1,11 @@
-name: Jan Heinrich Reimer
+name: Jan Heinrich Merker
 aliases:
-  - Jan Heinrich Merker
+  - Jan Heinrich Reimer
 address:
   street: Hohestieg 12
   zip: 38118
   city: Braunschweig
   country: Deutschland
 birthday: 1998-01-25
-mail: heinrich@reimer.family
+mail: heinrich@merker.ai
 phone: +49 174 9273954
