--- a/data/facts.yml
+++ b/data/facts.yml
@@ -7,5 +7,5 @@ address:
   city: Braunschweig
   country: Deutschland
 birthday: 1998-01-25
-mail: heinrich@merker.ai
+mail: heinrich@merker.id
 phone: +49 174 9273954
