--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,18 +39,12 @@ jobs:
         run: hugo
         env:
           HUGO_PARAMS_githubToken: ${{ secrets.GITHUB_TOKEN }}
-      - name: ♻️ Cache link checker requests
-        uses: actions/cache@v4
-        with:
-          path: .lycheecache
-          key: link-checker-${{ github.sha }}
-          restore-keys: link-checker-
       - name: 🔄 Check links
         id: linkCheck
         uses: lycheeverse/lychee-action@v1
         with:
           lycheeVersion: '0.13.0'
-          args: --require-https --verbose --no-progress --max-concurrency 1 --base public/ --cache --max-cache-age 1d --exclude https://twitter.com/H1iReimer/ --exclude https://linkedin.com/in/janheinrichmerker/ --exclude heinrich@merker.id --accept 999 --max-retries 10 --retry-wait-time 30 --max-redirects 10 --timeout 120 --method HEAD public/
+          args: --require-https --verbose --no-progress --max-concurrency 1 --base public/ --exclude https://twitter.com/H1iReimer/ --exclude https://linkedin.com/in/janheinrichmerker/ --exclude heinrich@merker.id --accept 999 --max-retries 10 --retry-wait-time 30 --max-redirects 10 --timeout 120 --method HEAD public/
           fail: true
       - name: 📤 Upload public pages
         uses: actions/upload-artifact@v4
