--- a/data/experience.yml
+++ b/data/experience.yml
@@ -11,7 +11,7 @@
     month: 11
   company:
     name: "Reimer Software"
-    url: https://reimer.dev/
+    url: https://merker.ai/
   job:
     i18n: selfEmployedFullStackSoftwareDevelopment
 - from:
